auth-svc/envoy.yaml
node:
  id: auth-node
  cluster: auth-proxy
static_resources:
  listeners:
  - name: grpc-listener
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 9001
    traffic_direction: INBOUND
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          codec_type: AUTO
          stat_prefix: ingress_auth
          add_user_agent: true
          tracing:
            verbose: true
          access_log:
          - name: envoy.file_access_log
            typed_config:
              "@type": type.googleapis.com/envoy.config.accesslog.v2.FileAccessLog
              path: "/dev/stdout"
          route_config:
            name: local_route
            virtual_hosts:
            - name: auth_service
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/api.Auth/"
                route:
                  cluster: auth-grpc
                decorator:
                  operation: "grpc.api.v1.auth"
              - match:
                  prefix: "/grpc"
                route:
                  cluster: auth-grpc
          http_filters:
          - name: envoy.health_check
            typed_config:
              "@type": type.googleapis.com/envoy.config.filter.http.health_check.v2.HealthCheck
              pass_through_mode: true
              headers:
                - name: ":path" # NOTE: the path filter should be added if tracing is enabled.
                  exact_match: "/grpc.health.v1.Health/Check"
          - name: envoy.router
            typed_config: {}
  - name: redis-listener
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 6379
    traffic_direction: OUTBOUND
    filter_chains:
    - filters:
      - name: envoy.redis_proxy
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.redis_proxy.v2.RedisProxy
          stat_prefix: egress_redis_auth
          settings: 
            op_timeout: 5s
          prefix_routes:
            catch_all_route:
              cluster: redis-auth
  clusters:
  - name: auth-grpc
    connect_timeout: 0.5s
    type: STATIC
    dns_lookup_family: V4_ONLY
    http2_protocol_options: {}
    load_assignment:
      cluster_name: auth-grpc
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 8000
    health_checks:
      timeout: 1s
      interval: 10s
      unhealthy_threshold: 3
      healthy_threshold: 1
      grpc_health_check: {}
  - name: jaeger
    connect_timeout: 1s
    type: STRICT_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: jaeger
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: jaeger.tracing.svc.cluster.local
                port_value: 9411
  - name: redis-auth
    connect_timeout: 1s
    type: STRICT_DNS
    dns_lookup_family: V4_ONLY
    extension_protocol_options:
      envoy.redis_proxy:
        auth_password:
          inline_string: Winv3HF60f
    load_assignment:
      cluster_name: redis-auth
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: redis5-master.redis.svc.cluster.local
                port_value: 6379
tracing:
  http:
    name: envoy.zipkin
    typed_config:
      "@type": type.googleapis.com/envoy.config.trace.v2.ZipkinConfig
      collector_cluster: jaeger
      collector_endpoint: "/api/v2/spans"
      trace_id_128bit: true
      shared_span_context: false
      collector_endpoint_version: HTTP_PROTO # options: HTTP_JSON_V1, HTTP_JSON
admin:
  access_log_path: "/dev/stdout"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9000
